<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:title="Categoría">
            <menu>
                <item
                    android:id="@+id/filter_fruit"
                    android:title="@string/filter_category_fruit"
                    android:checkable="true" />
                <item
                    android:id="@+id/filter_vegetable"
                    android:title="@string/filter_category_vegetable"
                    android:checkable="true" />
            </menu>
        </item>

        <item
            android:title="Condición">
            <menu>
                <item
                    android:id="@+id/filter_fresh"
                    android:title="@string/filter_condition_fresh"
                    android:checkable="true" />
                <item
                    android:id="@+id/filter_rotten"
                    android:title="@string/filter_condition_rotten"
                    android:checkable="true" />
            </menu>
        </item>

        <item
            android:id="@+id/filter_clear"
            android:title="@string/limpiar_filtros" />
    </group>
</menu>