<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".FeedbackActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/btnBackFeedback"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:tint="@color/purpleButton"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/icono"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valoraci_n_general_de_la_app"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <RatingBar
            android:id="@+id/ratingBarOverall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1.0"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuestionario_0_5_estrellas"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_marginTop="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_te_result_f_cil_usar_la_app"
            android:layout_marginTop="16dp"/>

        <RatingBar
            android:id="@+id/ratingQuestion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1.0"
            style="?android:attr/ratingBarStyle"
            android:layout_marginTop="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_te_gust_el_dise_o_de_la_interfaz"
            android:layout_marginTop="8dp"/>

        <RatingBar
            android:id="@+id/ratingQuestion2"
            style="?android:attr/ratingBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1.0"
            android:layout_marginTop="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_la_app_funcion_sin_errores_ni_bloqueos"
            android:layout_marginTop="8dp"/>

        <RatingBar
            android:id="@+id/ratingQuestion3"
            style="?android:attr/ratingBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1.0"
            android:layout_marginTop="4dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_te_parece_til_la_app_para_tus_necesidades"
            android:layout_marginTop="8dp"/>

        <RatingBar
            android:id="@+id/ratingQuestion4"
            style="?android:attr/ratingBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1.0"
            android:layout_marginTop="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5_la_presentaci_n_de_la_informaci_n_es_clara"
            android:layout_marginTop="8dp"/>
        <RatingBar
            android:id="@+id/ratingQuestion5"
            style="?android:attr/ratingBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1.0"
            android:layout_marginTop="4dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/describe_cualquier_error_que_hayas_encontrado"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="24dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextErrorDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="3"
                android:gravity="top"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tienes_alguna_sugerencia_de_mejora"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextImprovementSuggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="3"
                android:gravity="top"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSubmitFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enviar_valoraci_n"
            android:layout_marginTop="24dp"/>
    </LinearLayout>
</ScrollView>