<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/background1">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="275dp"
        android:layout_height="275dp"
        android:layout_marginTop="-80dp"
        android:layout_marginBottom="-10dp"
        android:contentDescription="@string/logo_de_la_app"
        android:src="@drawable/smartfreezer__3_" />

    <!-- Título de la pantalla -->
    <TextView
        android:id="@+id/createAccountTitle"
        style="@style/CustomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/login_user"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <!-- Input de Correo Electrónico -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/AppTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        android:textColorHint="#757575"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            app:drawableTint="@color/purpleButton"
            android:textColor="@color/purpleButton" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Input de Contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/AppTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="#757575"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/purpleButton"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@android:color/white"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            app:drawableTint="@color/purpleButton"
            android:textColor="@color/purpleButton" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Olvidaste la contraseña -->
    <TextView
        android:id="@+id/forgotPassword"
        style="@style/CustomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgotpass"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- CheckBox de mantener sesión iniciada -->
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/keepLoggedIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keeploggedin"
        android:textColor="@color/white"
        android:layout_marginTop="20dp" />

    <!-- Botón de Iniciar Sesión -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/purpleButton"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:cornerRadius="10dp" />

    <!-- Redirigir a la pantalla de registro -->
    <TextView
        android:id="@+id/registerLink"
        style="@style/CustomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/noaccount"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_gravity="center" />
</LinearLayout>
