<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main"
    android:orientation="vertical">

    <!-- Logo -->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="414dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/logo_de_la_app"
        android:scaleType="fitCenter"
        android:src="@drawable/smartfreezer__3_" />

    <TextView
        android:id="@+id/texto_bienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/main_tittle"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="401dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto"
        android:padding="20dp"
        android:text="@string/main_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/purpleButton"
        android:text="@string/main_button"
        android:textAllCaps="false"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:cornerRadius="10dp" />

</LinearLayout>